deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batts
  labels:
    app: batts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batts
  template:
    metadata:
      labels:
        app: batts
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
    spec:
      containers:
        - name: batts-backend
          image: ghcr.io/dcnick3/batts:backend-2aa468964c983b0e4df1c0fdd30d0cf9c81944e1
        - name: batts-frontend
          image: ghcr.io/dcnick3/batts:frontend-2aa468964c983b0e4df1c0fdd30d0cf9c81944e1
          ports:
            - containerPort: 3000
