deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: batts
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: batts
